--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -37,7 +37,7 @@ models:
 
 
 vars:
-  sector_number: [1,2,3,4,5,6,7]
+  sector_number: ["1","2","3","4","5","6","7"]
   census_region:  ["NEW","MAT","SAT","ESC","WSC","ENC","WNC","MTN","ACC","PACN"]
   nerc_region:  ["NPCC","MRO", "SERC","RFC","SPP", "TRE", "FRCC", "WECC"]
   month:  ["january","february","march","april","may","june","july","august","september","october","november","december"]
