--- a/1_etl_to_gcs/main-deployment.yaml
+++ b/1_etl_to_gcs/main-deployment.yaml
@@ -1,9 +1,9 @@
 ###
 ### A complete description of a Prefect Deployment for flow 'main'
 ###
-name: EIA_Electric_data_ETL
+name: EIA_Electri_data_ETL
 description: null
-version: 4a8243cd21af33b95f46bbd2d7f352f9
+version: 3ed2e3da394d5079065bd87ef1dc9888
 # The work queue that will handle this deployment's runs
 work_queue_name: default
 tags: []
@@ -32,11 +32,6 @@ entrypoint: etl_web_to_gcs.py:main
 parameter_openapi_schema:
   title: Parameters
   type: object
-  properties:
-    year:
-      title: year
-      position: 0
-      type: integer
-  required:
-  - year
+  properties: {}
+  required: null
   definitions: null
